@@ -1,3 +1,15 @@
+2002-03-04  Kevin Vandersloot <kfv101@psu.edu>
+	
+	* log_repaint.c: show details on double click and 
+	select row on single click. Also handle mouse scroll
+	events. 
+
+	* logview.c: don't select row on motion events.
+
+2002-02-28  Santhana Krishnan  <santhana.krishnan@wipro.com>
+
+	* logview.c: fixed bug on scroll bars when log view is empty. 
+
 2002-02-21  Bastien Nocera  <hadess@hadess.net>
 
 	* logrtns.c: (isLogFile): don't crash on empty files
